Fixed: Incorrect h3 colour on mobile classes. Fixed: Incorrect colour on poll_accordian class. Fixed: Missing webtag on Mobile mode top banner links.

--- a/forum/styles/black/mobile.css
+++ b/forum/styles/black/mobile.css
@@ -600,7 +600,7 @@ a.folder_list_link {
 }
 
 .post h3 {
-	background-color: #A6BED7;
+	background-color: #3E3E3E;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
@@ -676,7 +676,7 @@ a.folder_list_link {
 }
 
 .logon h3 {
-	background-color: #A6BED7;
+	background-color: #3E3E3E;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
