--- a/forum/styles/green/mobile.css
+++ b/forum/styles/green/mobile.css
@@ -600,7 +600,7 @@ a.folder_list_link {
 }
 
 .post h3 {
-	background-color: #A6BED7;
+	background-color: #63CA31;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
@@ -676,7 +676,7 @@ a.folder_list_link {
 }
 
 .logon h3 {
-	background-color: #A6BED7;
+	background-color: #63CA31;
     color: #FFFFFF;
     font-weight: normal;
     margin: 0;
