--- a/forum/styles/green/style.css
+++ b/forum/styles/green/style.css
@@ -857,7 +857,7 @@ div.poll_option_list ol li {
 }
 
 .poll_accordian {
-	background-color: #A6BED7;
+	background-color: #63CA31;
     color: #FFFFFF;
     font-weight: normal;
     padding: 1px 5px;
